// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNetwork should render 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="relative"
    role="combobox"
  >
    <label
      for="downshift-0-input"
      id="downshift-0-label"
    />
    <div
      class="relative flex items-center w-full flex-inline"
    >
      <div
        class="sc-AxiKw fRbeDg flex w-full border rounded transition-colors duration-200 bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
      >
        <div
          class="px-4 py-2 flex-0 w-14"
        >
          <div
            class="sc-AxjAm jDAceZ border-theme-neutral-200"
          />
        </div>
        <div
          class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
        >
          <div
            class="relative z-10 w-full"
            data-testid="select-network__typeahead-"
          >
            <div
              class="absolute left-0 font-semibold top-2 text-theme-neutral-light"
            />
          </div>
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-0-label"
            autocomplete="off"
            class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
            data-testid="select-asset__input"
            id="downshift-0-input"
            placeholder="Enter a network name"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectNetwork should render with networks 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="relative"
    role="combobox"
  >
    <label
      for="downshift-1-input"
      id="downshift-1-label"
    />
    <div
      class="relative flex items-center w-full flex-inline"
    >
      <div
        class="sc-AxiKw fRbeDg flex w-full border rounded transition-colors duration-200 bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
      >
        <div
          class="px-4 py-2 flex-0 w-14"
        >
          <div
            class="sc-AxjAm jDAceZ border-theme-neutral-200"
          />
        </div>
        <div
          class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
        >
          <div
            class="relative z-10 w-full"
            data-testid="select-network__typeahead-"
          >
            <div
              class="absolute left-0 font-semibold top-2 text-theme-neutral-light"
            />
          </div>
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-1-label"
            autocomplete="off"
            class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
            data-testid="select-asset__input"
            id="downshift-1-input"
            placeholder="Enter a network name"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      aria-labelledby="downshift-1-label"
      class="select-asset__items"
      data-testid="select-asset__items"
      id="downshift-1-menu"
      role="listbox"
    >
      <div
        aria-selected="false"
        class="inline-block pt-6 mr-6 cursor-pointer"
        id="downshift-1-item-0"
        role="option"
      >
        <div
          class="sc-AxjAm eZoLDa text-theme-danger-400 border-theme-danger-light"
        >
          <div
            class="sc-AxirZ hyqZof"
            height="26"
            width="26"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-selected="false"
        class="inline-block pt-6 mr-6 cursor-pointer"
        id="downshift-1-item-1"
        role="option"
      >
        <div
          class="sc-AxjAm eZoLDa text-theme-warning-400 border-theme-warning-200"
        >
          <div
            class="sc-AxirZ hyqZof"
            height="26"
            width="26"
          >
            <svg>
              btc.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-selected="false"
        class="inline-block pt-6 mr-6 cursor-pointer"
        id="downshift-1-item-2"
        role="option"
      >
        <div
          class="sc-AxjAm eZoLDa text-theme-neutral-800 border-theme-neutral-600"
        >
          <div
            class="sc-AxirZ hyqZof"
            height="26"
            width="26"
          >
            <svg>
              eth.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
